# Lux

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  cmake_install.cmake
include/: CMakeLists.txt  accept_reject.h  flipper.hpp  slicer-continuous-nolog.hpp  slicer-continuous.hpp  slicer-discrete-nolog.hpp  slicer-discrete.hpp  slicer.hpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  helpers.cpp  location.cpp  location.hpp  locations.cpp  locations.hpp  proposals_FLAT.cpp  proposals_FLAT.hpp  random.cpp  random.hpp  recapture.cpp  recapture.hpp  rv_constant.cpp  rv_constant.hpp  rv_missing_t_walk.cpp  rv_missing_t_walk.hpp  rv_missing_t_walk_core.cpp  rv_missing_t_walk_core.hpp  rv_missing_t_walk_observed_interval.cpp  rv_missing_t_walk_observed_interval.hpp  rv_missing_t_walk_observed_normal.cpp  rv_missing_t_walk_observed_normal.hpp  rv_normal.cpp  rv_normal.hpp  rv_t_walk.cpp  rv_t_walk.hpp  rv_uniform.cpp  rv_uniform.hpp  slicer.cpp  slicer.hpp  survival.cpp  survival.hpp  survival_FLAT.cpp  survival_FLAT.hpp  survival_FLAT_2.cpp  survival_FLAT_2.hpp  t_walk.cpp  t_walk.hpp  (+3 more)
